--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "url": "https://github.com/photonstorm/phaser3-project-template/issues"
   },
   "homepage": "https://github.com/photonstorm/phaser3-project-template#readme",
+  "prettier": {
+    "singleQuote": true
+  },
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
